...
    <string name="alert_dialog_title_warning">Warning</string>
    <string name="alert_dialog_message_event_addition">Are you sure you want to cancel the addition?</string>
    <string name="alert_dialog_message_registration">Are you sure you want to cancel the registration?</string>
    <string name="alert_dialog_message_confirm_event_addition">Confirm the event data?</string>
    <string name="alert_dialog_message_confirm_registration">Confirm the user data?</string>
    <string name="alert_dialog_message_telegram_option">Do you want enable telegram notifications?</string>
    <string name="alert_dialog_positive_button">Yes</string>
    <string name="alert_dialog_negative_button">No</string>
    <string name="alert_dialog_message_confirm_event_removal">Are you sure you want to remove the event selected?</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_yet_registered">"Not yet registered? "</string>
    <string name="sign_in_now"><u>Sign in now!</u></string>
    <string name="continue_without_logging_in"><u>Continue without logging in</u></string>
    <string name="empty_email_field_message">The email field cannot be empty.</string>
...
    <string name="empty_date_field_message">The date field cannot be empty.</string>
    <string name="empty_from_time_field_message">The start time field cannot be empty.</string>
    <string name="empty_to_time_field_message">The end time field cannot be empty.</string>
    <string name="successful_add_event">The event has been successfully added.</string>

    <string name="modify">Modify</string>
    <string name="remove">Remove</string>

    <string name="which_events">Events to show</string>
    <string name="past_events">Past events</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="between_dates_events">Events between two dates</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="choose_the_two_dates">Choose two dates</string>
    <string name="from_date">From date</string>
    <string name="at_time">at the time</string>
...
