<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/aev_menu_remove"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/remove"
        app:showAsAction="always" />

    <item android:id="@+id/aev_menu_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/modify"
        app:showAsAction="always" />
</menu>
