...
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    tools:layout_editor_absoluteY="81dp"> <!-- MOLTO IMPORTANTE PER RENDERE CLICKABLE GLI ITEM -->

    <TextView
        android:id="@+id/aeli_titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
...
